# logbook_rust

./: Cargo.toml  README.md
.metadadata/: commands.txt
src/: app.rs  body.rs  commands.rs  error.rs  keyEnvents.rs  main.rs  screen.rs
src/event/: keyEnvents.rs  mod.rs
