[package]
name = "logbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[scripts]
dev = "RUST_LOG=debug cargo run "


[dependencies]
cargo-watch = "8.4.0"
crossterm = "0.26.1"
env_logger = "0.10.0"
error-stack = "0.3.1"
log = "0.4.19"
rand = "0.8.5"
shell-words = "1.1.0"
tui = "0.19.0"
unicode-width = "0.1.10"

